# LameMP3

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/toma/lame/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LameMp3.c  LameMp3.h
app/src/main/cpp/lame/: id3tag.c  machine.h
app/src/main/java/com/toma/lame/: LameMp3.java  MP3Recorder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/toma/lame/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
